@@ -14,10 +14,10 @@ index 772bd2a7ea..2b345c854c 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 97b25f814f..d4234b452d 100644
+index 70d11ee309..81829b6d86 100644
 --- a/Changes
 +++ b/Changes
-@@ -524,6 +524,16 @@ OCaml 5.0
+@@ -527,6 +527,16 @@ OCaml 5.0
  - #11417: Fix regression allowing virtual methods in non-virtual classes.
    (Leo White, review by Florian Angeletti)
  
@@ -34,7 +34,7 @@ index 97b25f814f..d4234b452d 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -559,13 +569,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -562,13 +572,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -50,7 +50,7 @@ index 97b25f814f..d4234b452d 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -669,6 +679,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -672,6 +682,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -60,7 +60,7 @@ index 97b25f814f..d4234b452d 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -928,6 +941,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -931,6 +944,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -7608,7 +7608,7 @@ index 0000000000..9d8f847b96
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..1fe94fca03
+index 0000000000..fb8e142163
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,7549 @@
@@ -7628,10 +7628,10 @@ index 0000000000..1fe94fca03
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 97b25f814f..d4234b452d 100644
++index 70d11ee309..81829b6d86 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -524,6 +524,16 @@ OCaml 5.0
++@@ -527,6 +527,16 @@ OCaml 5.0
 + - #11417: Fix regression allowing virtual methods in non-virtual classes.
 +   (Leo White, review by Florian Angeletti)
 + 
@@ -7648,7 +7648,7 @@ index 0000000000..1fe94fca03
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -559,13 +569,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -562,13 +572,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -7664,7 +7664,7 @@ index 0000000000..1fe94fca03
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -669,6 +679,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -672,6 +682,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -7674,7 +7674,7 @@ index 0000000000..1fe94fca03
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -928,6 +941,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -931,6 +944,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
